Provided comments and descriptions
- for easy understanding

--- a/myOwnResearch/fine_tune_clip.ipynb
+++ b/myOwnResearch/fine_tune_clip.ipynb
@@ -1,6 +1,19 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Install Required Libraries\n",
+        "Installs necessary Python packages:\n",
+        "- `ftfy`, `regex`, and `tqdm` for text processing and progress tracking.\n",
+        "- `torchvision` and `datasets` for handling image datasets.\n",
+        "- `CLIP` from OpenAI's GitHub repository to enable image-text similarity computations.\n"
+      ],
+      "metadata": {
+        "id": "g3QFGFyYME99"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install ftfy regex tqdm\n",
@@ -212,6 +225,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "### Setup PyTorch Device\n",
+        "Determines whether a **GPU (CUDA)** is available and sets the computing device accordingly for faster model execution.\n"
+      ],
+      "metadata": {
+        "id": "FU-RWq9bMfk5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import torch\n",
@@ -236,6 +260,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "### Load CLIP Model\n",
+        "Loads the **CLIP ViT-B/32** model and preprocessing pipeline, moving the model to the specified device (CPU/GPU). Also, prints model parameters such as **input resolution, context length, and vocabulary size**.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "6p0DIKADMheq"
+      }
     },
     {
       "cell_type": "code",
@@ -276,6 +312,40 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Step 2: Load and Prepare the CIFAR-10 Dataset for CLIP Processing**  \n",
+        "\n",
+        "1. **Define Image Preprocessing Transforms**  \n",
+        "   - Resize images to **224x224** (required for CLIP).  \n",
+        "   - Convert images to **tensor format**.  \n",
+        "   - Normalize pixel values to match CLIP’s expected range **[-1, 1]**.  \n",
+        "\n",
+        "2. **Download and Load the CIFAR-10 Dataset**  \n",
+        "   - Ensure the dataset is available locally.  \n",
+        "   - Apply the defined **transformations** to all images.  \n",
+        "\n",
+        "3. **Create a DataLoader for Efficient Processing**  \n",
+        "   - Load images in **batches of 16**.  \n",
+        "   - Enable **shuffling** to randomize sample order.  \n",
+        "\n",
+        "4. **Extract CIFAR-10 Class Names**  \n",
+        "   - Retrieve and store the **10 category names** (e.g., airplane, car, bird, etc.).  \n",
+        "\n",
+        "5. **Convert Numeric Labels to Text Descriptions**  \n",
+        "   - Format each label as **\"A photo of a [class name]\"**.  \n",
+        "   - This ensures compatibility with CLIP’s text-based image matching.  \n",
+        "\n",
+        "6. **Load a Sample Batch and Generate Text Labels**  \n",
+        "   - Retrieve **a batch of 16 images and labels** from the dataset.  \n",
+        "   - Convert numeric labels into **text descriptions**.  \n",
+        "   - Print sample text labels to verify correct processing."
+      ],
+      "metadata": {
+        "id": "G6fEbtrcMjPO"
+      }
     },
     {
       "cell_type": "code",
@@ -342,6 +412,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **Step 3: Freeze Most Layers and Fine-Tune the Last Few Layers**  \n",
+        "\n",
+        "1. **Freeze All Layers by Default**  \n",
+        "   - Disable gradient updates for all model parameters.  \n",
+        "   - Ensures that the majority of the model remains unchanged during training.  \n",
+        "\n",
+        "2. **Unfreeze the Last Two Transformer Layers**  \n",
+        "   - Enable gradient updates for the last **two transformer layers** in both the **visual** (image encoder) and **text** (language encoder) components.  \n",
+        "   - This allows only the final layers to be fine-tuned, adapting the model to the new dataset while retaining most of its learned knowledge.  \n",
+        "\n",
+        "3. **Compute and Print the Number of Trainable Parameters**  \n",
+        "   - Count parameters that are **trainable** (i.e., not frozen).  \n",
+        "   - Display the total number of parameters that will be updated during training."
+      ],
+      "metadata": {
+        "id": "Z56s0WMmMk8V"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Freeze all layers except the last few\n",
@@ -376,6 +467,40 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Step 4: Set Up CLIP Model for Training with Optimized Performance**  \n",
+        "\n",
+        "1. **Import Required Libraries**  \n",
+        "   - Load necessary **PyTorch** and **CLIP** modules.  \n",
+        "   - Include **AMP (Automatic Mixed Precision)** for efficient training.  \n",
+        "\n",
+        "2. **Enable CUDA Optimizations**  \n",
+        "   - Activate **cudnn optimizations** for faster training.  \n",
+        "   - Enable **TF32 and FP16 reduced precision** for improved performance on supported GPUs.  \n",
+        "\n",
+        "3. **Set Up Device (CPU or GPU)**  \n",
+        "   - Check if a **CUDA-compatible GPU** is available.  \n",
+        "   - Use **GPU** if available; otherwise, default to **CPU**.  \n",
+        "\n",
+        "4. **Load the CLIP Model and Preprocessing Pipeline**  \n",
+        "   - Load the **ViT-B/32** CLIP model onto the selected device.  \n",
+        "   - Ensure **model precision is FP32** to prevent floating-point precision errors.  \n",
+        "\n",
+        "5. **Compile Model for Faster Execution (If Using PyTorch 2.0+)**  \n",
+        "   - If running **PyTorch 2.0 or later**, use **torch.compile()** to optimize runtime performance.  \n",
+        "\n",
+        "6. **Enable Gradients for All Model Parameters**  \n",
+        "   - Ensure that all layers of the model are **trainable**.  \n",
+        "\n",
+        "7. **Set Model to Training Mode**  \n",
+        "   - Switch the model to **training mode** to enable updates during optimization."
+      ],
+      "metadata": {
+        "id": "1qWqpqPyMpYy"
+      }
     },
     {
       "cell_type": "code",
@@ -740,6 +865,61 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **Step 5: Implement Contrastive Loss and Train the CLIP Model Efficiently**  \n",
+        "\n",
+        "1. **Define Contrastive Loss Function**  \n",
+        "   - Implements a **contrastive loss function** with a **temperature parameter (0.07)**.  \n",
+        "   - Computes **similarity scores** between image and text features.  \n",
+        "   - Uses **cross-entropy loss** to match image-text pairs.  \n",
+        "\n",
+        "2. **Optimize Data Loading with a Large Batch Size**  \n",
+        "   - Sets a **batch size of 128** for **better GPU utilization**.  \n",
+        "   - Uses **pin_memory=True** and **4 workers** for faster data transfer.  \n",
+        "\n",
+        "3. **Initialize Optimizer and Gradient Scaler**  \n",
+        "   - Uses **AdamW optimizer** with **learning rate 1e-5** for stable training.  \n",
+        "   - Uses **automatic mixed precision (AMP)** via `GradScaler` for **faster computation**.  \n",
+        "\n",
+        "4. **Enable Gradient Accumulation to Reduce GPU Communication**  \n",
+        "   - Accumulates gradients over **4 batches** before performing an update.  \n",
+        "   - Helps train with **larger effective batch sizes** on limited memory.  \n",
+        "\n",
+        "5. **Start Training Loop for 5 Epochs**  \n",
+        "   - Iterates over the dataset for **5 full passes (epochs)**.  \n",
+        "   - Clears previous gradients before each iteration.  \n",
+        "\n",
+        "6. **Move Images and Labels to GPU Efficiently**  \n",
+        "   - Transfers images to **GPU with non-blocking mode** for faster data access.  \n",
+        "   - Converts numeric labels into **text descriptions** and tokenizes them.  \n",
+        "\n",
+        "7. **Compute Image and Text Features Using Mixed Precision**  \n",
+        "   - Uses **AMP (`autocast`)** for **faster and memory-efficient computations**.  \n",
+        "   - Normalizes feature vectors to prevent instability.  \n",
+        "\n",
+        "8. **Compute Contrastive Loss**  \n",
+        "   - Passes **image and text embeddings** to the **ContrastiveLoss** function.  \n",
+        "   - Ensures that similar image-text pairs have **higher similarity scores**.  \n",
+        "\n",
+        "9. **Handle NaN or Inf Loss Values**  \n",
+        "   - Skips batches where the loss is **NaN (Not a Number) or Inf (Infinity)**.  \n",
+        "   - Prevents model divergence due to unstable gradients.  \n",
+        "\n",
+        "10. **Perform Gradient Scaling and Accumulation**  \n",
+        "   - **Scales the loss** to maintain numerical stability with **mixed precision**.  \n",
+        "   - Updates the optimizer **only every 4 steps** (accumulated gradients).  \n",
+        "   - Uses **gradient clipping (`max_norm=1.0`)** to avoid exploding gradients.  \n",
+        "\n",
+        "11. **Track and Display Training Progress**  \n",
+        "   - Computes **average loss per epoch** for monitoring model performance.  \n",
+        "   - Displays **GPU memory usage** to track hardware efficiency."
+      ],
+      "metadata": {
+        "id": "RovQMx3mN9UR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -871,7 +1051,34 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### **Step 6: Evaluate the Trained CLIP Model with an Image and Text Prompts**  \n",
+        "\n",
+        "1. **Load and Preprocess a Test Image**  \n",
+        "   - Opens a sample image (`test_image.jpeg`).  \n",
+        "   - Applies **preprocessing transformations** (resizing, normalization).  \n",
+        "   - Adds an extra **batch dimension** using `.unsqueeze(0)`.  \n",
+        "   - Moves the image to the **GPU or CPU** as required.  \n",
+        "\n",
+        "2. **Define Sample Text Prompts for Comparison**  \n",
+        "   - Creates a list of **descriptive text prompts** (e.g., \"A photo of a cat\", \"A photo of a dog\").  \n",
+        "   - Tokenizes the text and moves it to the **GPU/CPU**.  \n",
+        "\n",
+        "3. **Extract Image and Text Features Using the CLIP Model**  \n",
+        "   - **Disables gradient tracking** using `torch.no_grad()` to save memory.  \n",
+        "   - Passes the image and text inputs through the **CLIP encoders** to extract feature embeddings.  \n",
+        "\n",
+        "4. **Normalize the Feature Vectors**  \n",
+        "   - Ensures that **image and text embeddings** have unit length.  \n",
+        "   - Prevents numerical instability in similarity calculations.  \n",
+        "\n",
+        "5. **Compute Cosine Similarity Between Image and Text**  \n",
+        "   - Calculates **cosine similarity** between the **image and each text prompt**.  \n",
+        "   - Retrieves **similarity scores**, showing how well the image matches each description.  \n",
+        "\n",
+        "6. **Display Similarity Scores**  \n",
+        "   - Prints the computed **similarity scores** to evaluate which text prompt best describes the test image."
+      ],
       "metadata": {
         "id": "r9IQ-VfV_ypm"
       }
@@ -949,6 +1156,44 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### **Step 7: Perform Image-Text Similarity Matching Using CLIP**  \n",
+        "\n",
+        "1. **Set Up Device and Load CLIP Model**  \n",
+        "   - Determines whether to use **GPU or CPU** for computation.  \n",
+        "   - Loads the **ViT-B/32** CLIP model and its preprocessing pipeline onto the selected device.  \n",
+        "\n",
+        "2. **Load and Preprocess the Test Image**  \n",
+        "   - Opens an image (`test1.jpeg`) from the **test_images/** directory.  \n",
+        "   - Applies **resizing, normalization, and conversion to tensor format**.  \n",
+        "   - Adds an extra **batch dimension** and moves the image to the **GPU/CPU**.  \n",
+        "\n",
+        "3. **Define Text Prompts for Image Matching**  \n",
+        "   - Creates multiple **descriptive text prompts** (e.g., \"A photo of a dog\", \"A cute kitten\").  \n",
+        "   - Tokenizes the text and moves it to the **GPU/CPU**.  \n",
+        "\n",
+        "4. **Extract Image and Text Features Using CLIP**  \n",
+        "   - Disables **gradient tracking** to optimize memory usage.  \n",
+        "   - Passes the image and text inputs through CLIP's **image and text encoders** to extract feature embeddings.  \n",
+        "\n",
+        "5. **Normalize the Feature Vectors**  \n",
+        "   - Ensures that both **image and text embeddings** have unit length.  \n",
+        "   - This improves **numerical stability** for similarity computations.  \n",
+        "\n",
+        "6. **Compute Cosine Similarity Between Image and Text Prompts**  \n",
+        "   - Measures how closely the **image matches each text prompt** using **cosine similarity**.  \n",
+        "   - Produces a **similarity score for each text description**.  \n",
+        "\n",
+        "7. **Print and Interpret Similarity Scores**  \n",
+        "   - Displays **similarity values**, showing how well the image aligns with each text prompt.  \n",
+        "   - The highest similarity score indicates the **most relevant text description** for the image."
+      ],
+      "metadata": {
+        "id": "qHU4Cv1mOGDU"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -999,24 +1244,27 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "erAAVDAHIuin"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "BSlpCNSKJGru"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### **Step 8: Load and Preprocess Multiple Images for CLIP Processing**  \n",
+        "\n",
+        "1. **Load the CLIP Model and Set Device**  \n",
+        "   - Determines whether to use **GPU or CPU** for computation.  \n",
+        "   - Loads the **ViT-B/32** CLIP model along with its **preprocessing pipeline**.  \n",
+        "\n",
+        "2. **Define Dataset Folder and Retrieve Image Files**  \n",
+        "   - Specifies the directory (`test_images/`) containing **sample images**.  \n",
+        "   - Collects a list of **all image files** in the folder (supports `.jpg`, `.png`, and `.jpeg`).  \n",
+        "\n",
+        "3. **Process and Preprocess Each Image**  \n",
+        "   - Iterates through all images in the folder.  \n",
+        "   - Opens each image, **converts it to RGB format**, and stores the original version.  \n",
+        "   - Applies **CLIP preprocessing** (resizing, normalization, tensor conversion).  \n",
+        "\n",
+        "4. **Convert All Images into a Batch Tensor**  \n",
+        "   - Stacks **all preprocessed images** into a single tensor batch.  \n",
+        "   - Moves the batch to the **GPU or CPU**, making it ready for CLIP processing."
+      ],
       "metadata": {
         "id": "JqN6Htm5JGoW"
       }
@@ -1056,6 +1304,49 @@
       },
       "execution_count": 19,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Step 9: Perform Image Retrieval Based on a Text Query**  \n",
+        "\n",
+        "1. **Define a Search Query**  \n",
+        "   - Specifies a **text description** (e.g., *\"A photo of sea with coconut leaves on top\"*) as the **search input**.  \n",
+        "   - Tokenizes the text query and moves it to the **GPU/CPU** for processing.  \n",
+        "\n",
+        "2. **Compute Image and Text Features Using CLIP**  \n",
+        "   - Uses the **pre-trained CLIP model** to generate **feature embeddings** for all images in the dataset.  \n",
+        "   - Extracts the **text embedding** for the query.  \n",
+        "\n",
+        "3. **Normalize the Feature Vectors**  \n",
+        "   - Ensures that both **image and text embeddings** have unit length.  \n",
+        "   - This improves numerical stability when computing **similarity scores**.  \n",
+        "\n",
+        "4. **Compute Similarity Between Query and Images**  \n",
+        "   - Calculates **cosine similarity** between the **text query and each image** in the dataset.  \n",
+        "   - Produces a **similarity score** for each image, indicating how closely it matches the query.  \n",
+        "\n",
+        "5. **Find the Best Matching Image**  \n",
+        "   - Identifies the image with the **highest similarity score** using `np.argmax()`.  \n",
+        "   - Retrieves the **best-matching image** from the dataset.  \n",
+        "\n",
+        "6. **Display the Most Relevant Image**  \n",
+        "   - Plots the **best-matching image** using `matplotlib`.  \n",
+        "   - Removes axis labels for a cleaner display.  \n",
+        "   - Shows the **search query and similarity score** as the title.\n"
+      ],
+      "metadata": {
+        "id": "Ck-Slbz1ORbn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Test1"
+      ],
+      "metadata": {
+        "id": "Tz5oI4nSOVJ1"
+      }
     },
     {
       "cell_type": "code",
@@ -1111,6 +1402,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### Test2"
+      ],
+      "metadata": {
+        "id": "Ckhz4AaiOWvm"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "\n",
@@ -1162,6 +1462,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Test3"
+      ],
+      "metadata": {
+        "id": "_vNKTKFxOYE7"
+      }
     },
     {
       "cell_type": "code",
